--- a/src/dwa.domain/dwa.domain.csproj
+++ b/src/dwa.domain/dwa.domain.csproj
@@ -7,7 +7,7 @@
   <ItemGroup>
     <PackageReference Include="MediatR" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.2.0" />
-
+    <PackageReference Include="Ardalis.GuardClauses" Version="1.2.3" />
   </ItemGroup>
 
 </Project>
